# stignore-gitignore

./: LICENSE  Readme.md  generate-stignore.py  pyproject.toml  shell.nix
