[tool.poetry]
name = "stignore-gitignore"
version = "0.1.0"
description = ""
authors = ["Nick Rance <nicholas.rance@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gitignore-parser = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
